2008-10-16  David Edelsohn  <edelsohn@gnu.org>

	PR target/35483
	* Makefile.in (coverage.o): Depend on $(TM_P_H).
	* coverage.c: Include tm_p.h.
	* config/rs6000/x-aix (jc1): Override LDFLAGS.
	* config/rs6000/xcoff.h (ASM_GENERATE_INTERNAL_LABEL): Strip
	dollar signs from PREFIX.
	* config/rs6000/rs6000.c (output_toc): Use RS6000_OUTPUT_BASENAME
	instead of manual strip_name_encoding.

2008-10-16  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37418
	* tree-ssa.c (useless_type_conversion_p_1): Do not treat
	volatile qualified functions or methods as relevant.

2008-10-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37525
	* tree.c (int_fits_type_p): Rewrite using double_int.  Zero extend
	sizetype unsigned constants, both in the case of C and bounds.

2008-10-15  Jan Hubicka  <jh@suse.cz>

	* ira-emit.c (change_regs): Return false when replacing reg by
	itself.

2008-10-14  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/37633
	* ira-costs.c (ira_tune_allocno_costs_and_cover_classes): Check
	HARD_REGNO_CALL_PART_CLOBBERED.

2008-10-15  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/37535
	* ira-lives.c (mark_early_clobbers): Remove.
	(make_pseudo_conflict, check_and_make_def_use_conflicts,
	check_and_make_def_conflicts,
	make_early_clobber_and_input_conflicts,
	mark_hard_reg_early_clobbers): New functions.
	(process_bb_node_lives): Call
	make_early_clobber_and_input_conflicts and
	mark_hard_reg_early_clobbers.  Make hard register inputs live
	again.

	* doc/rtl.texi (clobber): Change descriotion of RA behaviour for
	early clobbers of pseudo-registers.
	
2008-10-15  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/37674
	* ira-build.c (ira_flattening): Recalculate
	ALLOCNO_TOTAL_NO_STACK_REG_P and ALLOCNO_TOTAL_CONFLICT_HARD_REGS
	from the scratch instead of the propagation.
	
2008-10-15  Richard Sandiford  <rdsandiford@googlemail.com>

	* doc/rtl.texi (const_double): Remove the "addr" operand.